--- a/.github/workflows/aws-lambda-cs-package.yml
+++ b/.github/workflows/aws-lambda-cs-package.yml
@@ -10,6 +10,9 @@ on:
       projectpath:
         required: true
         type: string
+      artifact_name:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -33,6 +36,6 @@ jobs:
     - name: "Archive artifacts"
       uses: actions/upload-artifact@v3
       with:
-        name: lambdaFunction
+        name: ${{ inputs.artifact_name }}
         path: |
             ${{ inputs.projectname }}.zip
