--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,22 +3,10 @@ name: Terraform
 on:
   workflow_call:
     inputs:
-      artifact_name1:
+      artifact_name:
         required: false
         type: string
-      artifact_target_directory1:
-        required: false
-        type: string
-      artifact_name2:
-        required: false
-        type: string
-      artifact_target_directory2:
-        required: false
-        type: string
-      artifact_name3:
-        required: false
-        type: string
-      artifact_target_directory3:
+      artifact_target_directory:
         required: false
         type: string
       terraform_version:
@@ -56,26 +44,12 @@ jobs:
     - name: "Checkout Git repository"
       uses: actions/checkout@v2
 
-    - name: "Download Artifacts1"
-      if: ${{ inputs.artifact_name1 != '' }}
+    - name: "Download Artifacts"
+      if: ${{ inputs.artifact_name != '' }}
       uses: actions/download-artifact@v3
       with:
-        name: ${{ inputs.artifact_name1 }}
-        path: ${{ inputs.artifact_target_directory1 }}        
-
-    - name: "Download Artifacts2"
-      if: ${{ inputs.artifact_name2 != '' }}
-      uses: actions/download-artifact@v3
-      with:
-        name: ${{ inputs.artifact_name2 }}
-        path: ${{ inputs.artifact_target_directory2 }}   
-
-    - name: "Download Artifacts3"
-      if: ${{ inputs.artifact_name3 != '' }}
-      uses: actions/download-artifact@v3
-      with:
-        name: ${{ inputs.artifact_name3 }}
-        path: ${{ inputs.artifact_target_directory3 }}   
+        name: ${{ inputs.artifact_name }}
+        path: ${{ inputs.artifact_target_directory }}        
 
     - name: "Install Terraform"
       uses: hashicorp/setup-terraform@v2
