--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,12 +51,22 @@ jobs:
           printf '%s' ${{ inputs.terraform_workspace }} > .terraform/environment
 
       - name: "Validate Terraform"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          ENVIRONMENT: ${{ inputs.terraform_workspace }}
+          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
           terraform init
           terraform validate -no-color
           terraform fmt -check -recursive
 
       - name: "Apply Terraform"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          ENVIRONMENT: ${{ inputs.terraform_workspace }}
+          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
           terraform init
           terraform apply -auto-approve
