--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,6 +51,7 @@ jobs:
           printf '%s' ${{ inputs.terraform_workspace }} > .terraform/environment
 
       - name: "Validate Terraform"
+        if: ${{ inputs.terraform_workspace == 'dev' }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
@@ -62,9 +63,33 @@ jobs:
           terraform fmt -check -recursive
 
       - name: "Apply Terraform"
+        if: ${{ inputs.terraform_workspace == 'dev' }}
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
+          TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
+        run: |
+          terraform init
+          terraform apply -auto-approve
+
+      - name: "Validate Terraform"
+        if: ${{ inputs.terraform_workspace == 'int' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.INT_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.INT_AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
+          TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
+        run: |
+          terraform init
+          terraform validate -no-color
+          terraform fmt -check -recursive
+
+      - name: "Apply Terraform"
+        if: ${{ inputs.terraform_workspace == 'int' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.INT_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.INT_AWS_SECRET_ACCESS_KEY }}
           TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
           TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
