--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,7 @@ on:
 
 jobs:
   terraform:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
 
     defaults:
@@ -51,10 +52,9 @@ jobs:
           printf '%s' ${{ inputs.terraform_workspace }} > .terraform/environment
 
       - name: "Validate Terraform"
-        if: ${{ inputs.terraform_workspace == 'dev' }}
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
           TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
@@ -63,33 +63,9 @@ jobs:
           terraform fmt -check -recursive
 
       - name: "Apply Terraform"
-        if: ${{ inputs.terraform_workspace == 'dev' }}
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
-          TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
-        run: |
-          terraform init
-          terraform apply -auto-approve
-
-      - name: "Validate Terraform"
-        if: ${{ inputs.terraform_workspace == 'int' }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.INT_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INT_AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
-          TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
-        run: |
-          terraform init
-          terraform validate -no-color
-          terraform fmt -check -recursive
-
-      - name: "Apply Terraform"
-        if: ${{ inputs.terraform_workspace == 'int' }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.INT_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INT_AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
           TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
