Added: Input for environment

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,9 @@ on:
       terraform_workspace:
         required: false
         type: string
+      environment:
+        required: true
+        type: string
 
 jobs:
   terraform:
