--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   terraform:
-    environment: ${{ inputs.environment }}
+    environment: "dev"
     runs-on: ubuntu-latest
 
     defaults:
