--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,18 +43,11 @@ jobs:
           name: ${{ inputs.artifact_name }}
           path: ${{ inputs.artifact_target_directory }}
 
-      - name: "Download Artifacts"
-        if: ${{ inputs.artifact_name != '' }}
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ inputs.artifact_name }}
-          path: ${{ inputs.artifact_target_directory }}
-
       - name: "Install Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ inputs.terraform_version }}
-          cli_config_credentials_token: 0EmE1nP7ql4HMg.atlasv1.BRziDNgdteChzPUvElZ6k3ZEcIpKF4riBJJzgyRE41EcXfaAkiD8LtQLPPqRrivWWt0
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_CLOUD_AUTH }}
 
       - name: "Select workspace"
         run: |
