Allow apply until target.

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,9 @@ on:
       environment:
         required: true
         type: string
+      target:
+        required: false
+        type: string
 
 jobs:
   terraform:
@@ -66,7 +69,20 @@ jobs:
           terraform validate -no-color
           terraform fmt -check -recursive
 
-      - name: "Apply Terraform"
+      - name: "Apply Terraform until target"
+        if: ${{ inputs.artifact_name != '' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          TF_VAR_ENVIRONMENT: ${{ inputs.terraform_workspace }}
+          TF_VAR_TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
+        run: |
+          terraform init
+          terraform apply -auto-approve -target=${{ inputs.artifact_target_directory }}
+
+      - name: "Apply Terraform until end"
+        if: ${{ inputs.artifact_name == '' }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
