--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -24,3 +24,9 @@ jobs:
         uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - run: echo ${{ needs.release.outputs.release_upload_url }}
