--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -25,6 +25,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - run: echo ${{ steps.release_drafter.outputs.release_upload_url }}
+
   job2:
     runs-on: ubuntu-latest
     needs: release
