--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: echo ${{ steps.release_drafter.outputs.release_upload_url }}
+      - run: echo ${{ steps.release_drafter.outputs.upload_url }}
 
   job2:
     runs-on: ubuntu-latest
