--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -23,9 +23,11 @@ jobs:
         path: artifacts/
 
     - run: |
-        ls -la artifacts/edge-software-binaries/
+        ls -la ${{ steps.download_artifact.outputs.download-path }}/
+        echo "test1"
+        ls -la ${{ steps.download_artifact.outputs.download-path }}/${{ inputs.artifact_name }}/
         echo "test"
-        ls -la artifacts/edge-software-binaries/
+
 
     - uses: ncipollo/release-action@v1
       with:
