--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -24,12 +24,10 @@ jobs:
 
     - run: |
         cd ${{ steps.download_artifact.outputs.download-path }}/
-        ls -la | grep -oE "\s\.[a-z]+" | xargs rm -rf
-        echo "test1"
-        ls -la
+        ls -la | grep -oE "\s\.[a-z-_]+" | xargs rm -rf
 
     - uses: ncipollo/release-action@v1
       with:
         generateReleaseNotes: true
-        artifacts: "${{ steps.download_artifact.outputs.download-path }}/${{ inputs.artifact_name }}/*"
+        artifacts: "${{ steps.download_artifact.outputs.download-path }}/"
         token: ${{ secrets.GITHUB_TOKEN }}
