--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -24,7 +24,7 @@ jobs:
 
     - run: |
         cd ${{ steps.download_artifact.outputs.download-path }}/
-        ls -la | grep -oE "\s\.[a-z-_]+" | xargs rm -rf
+        ls -la | grep -oE "\s\.[a-z\-_]+" | xargs rm -rf
 
     - uses: ncipollo/release-action@v1
       with:
