--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -11,20 +11,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          # Full git history is needed to get a proper
-          # list of changed files within `super-linter`
           fetch-depth: 0
 
-      # Runs a single command using the runners shell
       - name: Ansible Lint
         # Uses the slim image to speed up build time
         uses: github/super-linter/slim@v4
         env:
           # Only parse new or edited files
           VALIDATE_ALL_CODEBASE: false
-          # Just validate for markdon files
+          # Just validate ansible related files
           VALIDATE_ANSIBLE: true
+          # Check every file starting at the root directory
           ANSIBLE_DIRECTORY: .
-          # Path to the file where the custom markdownlint rules are saved
           DEFAULT_BRANCH: ${{ env.GITHUB_REF_NAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
