--- a/.github/workflows/terraform_destroy.yaml
+++ b/.github/workflows/terraform_destroy.yaml
@@ -16,8 +16,15 @@ on:
       environment:
         required: true
         type: string
+      artifact_name:
+        required: false
+        type: string
+      artifact_target_directory:
+        required: false
+        type: string
 
 jobs:
+
   terraform_destroy:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
@@ -29,6 +36,13 @@ jobs:
     steps:
       - name: "Checkout Git repository"
         uses: actions/checkout@v2
+
+      - name: "Download Artifacts"
+        if: ${{ inputs.artifact_name != '' }}
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact_name }}
+          path: ${{ inputs.artifact_target_directory }}
 
       - name: "Install Terraform"
         uses: hashicorp/setup-terraform@v2
