--- a/.github/workflows/rust-code-general.yml
+++ b/.github/workflows/rust-code-general.yml
@@ -68,8 +68,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: framtale
+          password: ${{ secrets.GHCR_PASSWORD }}
 
       - name: Clippy check
         uses: actions-rs/clippy-check@v1
@@ -106,8 +106,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: framtale
+          password: ${{ secrets.GHCR_PASSWORD }}
 
       - name: Build
         uses: actions-rs/cargo@v1
@@ -145,8 +145,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: framtale
+        password: ${{ secrets.GHCR_PASSWORD }}
 
 
     - name: Build for cross-targets
